# IMAV_2019

./: Ftext.py  FtextL.py  FtextR.py  README.md  align_to_frame.py  class_FtextL_final.py  class_FtextR_final.py  class_call.py  class_call_master.py  controller2.py  csvParser.py  csvParserfinal.py  depthMapwithTelloV1.py  fps_check.py  land.py  orient_yaw.py  out2.csv  output.csv  outputf.csv  parser2.py  passFrmWindow.py  qrcode.py  shelf_trav.py  shelf_trav_call.py  skip_shel.py  tello-frame-detection.py  tello_frame_detection.py  testing.py  threaded_positional.py  toffNsrchShelf.py  warehouse.csv
FINAL/: after_shelf.py  main_final.py  orient_yaw.py  out1.csv  output.csv  outputf.csv
Individual-tests/: text_test.py
JoyStick Controller/: controller_module.py
NEW_FINAL/: after_shelf.py  align_rect.py  distribution.csv  final_csv.py  main_final.py  outputf.csv  t1.csv
NEW_FINAL_NO_TRACK/: after_shelf.py  align_rect.py  class_FtextL_final.py  class_FtextR_final.py  distribution.csv  main_final.py  orient_yaw.py  tello_height.py
djitellopy/: tello.py
docs/: wifi_doc.odt
height/: tello_height.py
imav-warehouse-management/: Capture.py  Ftext.py  README.md  cavityTrav1.py  csvParserfinal.py  final_csv_final.py  main.py  main2.py  move.py  orient_yaw.py  shelfnum.py  tess_east.py  test.py  test2.py  threshold.py  (+3 more)
tello_precision_landing/: CMakeLists.txt  README.md  ibvs_test  image_pb2.py  package.xml  tello_height.py  tello_land.py
tello_precision_landing/src/: Makefile  README.md  detect.cpp  detect.h  helpers.cpp  helpers.h  ibvs.cpp  ibvs.h  image.pb.cc  image.pb.h  image.proto  point.cpp  point_detect.cpp  point_detect.h  ros.cpp  ros.h  tello_land.py  track.cpp  track.h
(+122 files in other folders)
